<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Nam\'ma SIT</string>

    <string name="bold" tools:ignore="ReferenceType">@font/bio_rhyme_bold</string>
    <string name="extra_bold" tools:ignore="ReferenceType">@font/bio_rhyme_extra_bold</string>
    <string name="extra_light" tools:ignore="ReferenceType">@font/bio_rhyme_extra_light</string>
    <string name="light" tools:ignore="ReferenceType">@font/bio_rhyme_light</string>
    <string name="regular" tools:ignore="ReferenceType">@font/bio_rhyme_regular</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">start</string>
    <string name="close">close</string>
    <string name="Home">Home</string>
    <string name="Feed">Feed</string>
    <string name="About">About</string>
    <string name="Gallery">Gallery</string>
    <string name="Faculty">Faculty</string>
    <string name="Lectures">Lectures</string>
    <string name="eBook">e-Books</string>
    <string name="InternalLinks"><u>Internal Links</u></string>
    <string name="Website">Website</string>
    <string name="Share">Share</string>
    <string name="Theme">Theme</string>
    <string name="RateUs">Rate Us</string>
    <string name="Developer">Know Developers</string>
    <string name="Cisco_Netacad"><u>CISCO Netacad</u></string>
    <string name="Merit"><u>Merit</u></string>
    <string name="Moodle"><u>Moodle</u></string>
    <string name="NPTEL"><u>NPTEL</u></string>
    <string name="OPAC"><u>OPAC</u></string>
    <string name="Admission"><u>Admission</u></string>
    <string name="Enquiry"><u>Enquiry</u></string>
    <string name="Grievance_Form"><u>Grievance Form</u></string>
    <string name="Open_Elective"><u>Open Elective</u></string>
    <string name="Placement_Portal"><u>Placement Portal</u></string>
    <string name="Fee_Payment"><u>Fee Payment</u></string>

    <string name="aboutCollege">Vision
To develop young minds in a learning environment of high academic ambience by synergising spiritual values and technological competence.Mission
To continuously strive for the total development of students by educating them in state-of-the-art-technologies and helping them imbibe professional ethics and societal commitment, so that they emerge as competent professionals to meet the global challenges.
Quality PolicySiddaganga Institute of Technology is Committed to:1. Impart Quality Education by establishing effective learning teaching earning processes to produce competent engineers and managers with high professional ethics and societal responsibility.2. Create congenial environment and provide state-of the-art infrastructure.
3. Continually improve the effectiveness</string>
    <string name="Departments">Departments</string>
    <string name="ComputerScience">Computer Science</string>
    <string name="InformationScience">Information Science</string>
    <string name="Namma_SIT">SIT_Official</string>
    <string name="Title_Will_Load_Here">Title Will Load Here</string>
    <string name="Date">Date: </string>
    <string name="Time">Time: </string>
    <string name="demoDate">00/00/00</string>
    <string name="demoTime">00:00</string>
    <string name="No_Record_Available">No Record Available</string>


    <string name="Information_Science_engineering">Information Science &amp; Engineering</string>
    <string name="Computer_Science_And_Engineering">Computer Science &amp; Engineering</string>
    <string name="Mechanical_Engineering">Mechanical Engineering</string>
    <string name="Electronics_And_Communication_Engineering">Electronics &amp; Communication Engineering</string>
    <string name="Telecommunication_Engineering">Telecommunication engineering</string>
    <string name="Electronics_And_Instrumentation_Engineering">Electronics &amp; Instrumentation Engineering</string>
    <string name="Mathematics">Mathematics</string>
    <string name="Physics">Physics</string>
    <string name="Chemical_Engineering">Chemical Engineering</string>
    <string name="Chemistry">Chemistry</string>
    <string name="Biotechnology">Biotechnology</string>
    <string name="MBA">Master of Business Administration</string>
    <string name="Architecture">Architecture</string>
    <string name="Administration_And_Non_Teaching">Administration &amp; Non-Teaching</string>
    <string name="Electronics_And_Telecommunication_Engineering">Electronics &amp; Telecommunication Engineering</string>
    <string name="Industrial_Engineering_And_Management">Industrial Engineering &amp; Management</string>
    <string name="Artificial_Intelligence_and_Data_Science">Artificial Intelligence and Data Science</string>
    <string name="Master_Of_Computer_Application">Master of Computer Application</string>
    <string name="Civil_Engineering">Civil Engineering</string>
    <string name="Nanotechnology">Nanotechnology</string>
    <string name="Electronics_and_Electrical_Engineering">Electronics &amp; Electrical Engineering</string>

    <string name="Companies_Visited">Companies Visited</string>
    <string name="Offers_Made">Offers Made To Date</string>
    <string name="Internships_Offered">Internships Offered</string>
    <string name="Highest_Package">Highest Package</string>

    <string name="Overview">Overview:</string>
    <string name="ourValues">Our values:</string>
    <string name="Vision"><u>Vision</u>:</string>
    <string name="Mission"><u>Mission</u>:</string>
    <string name="Quality_Policy"><u>Quality Policy</u>:</string>
    <string name="Administrative_Management"><u>Admin Management</u>:</string>

    <string name="Visit_Page"><u>Visit Page</u></string>

    <string name="collegeName">Siddaganga Institute of Technology</string>
    <string name="collegeSplashText">An Autonomous Institute, Affiliated to VTU Belagavi, Approved by AICTE</string>
    <string name="collegeAddress">B.H. Road, Tumkur 572 103, Karnataka, India</string>
    <string name="institutionalValues">Institutional Values:</string>
    <string name="coreValues">Core Values:</string>
    <string name="Search">Search</string>
    <string name="address">Address:</string>
    <string name="principal">Principal:</string>
    <string name="phone1">Phone1:</string>
    <string name="phone2">Phone2:</string>
    <string name="office">Office:</string>
    <string name="PlacementsDept">Placement:\nDept.</string>
    <string name="find_us_here">Find us here:</string>
    <string name="contact">Contact:</string>
    <string name="clubs_of_sit">Clubs Of SIT</string>
    <string name="know_more"><u>Know More</u></string>
    <string name="type">Type</string>
    <string name="name">Name</string>
    <string name="description">Description:</string>
    <string name="description_comes_here">Description comes here.</string>
    <string name="club_gallery">Club Gallery:</string>

    <string-array name="themeChoice">
        <item>System Default</item>
        <item>Dark</item>
        <item>Light</item>
    </string-array>

</resources>
