<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <item android:id="@+id/navigation_video"-->
<!--          android:title="@string/Lectures"-->
<!--        android:icon="@drawable/ic_video"/>-->
    <item android:id="@+id/navigation_ebook"
          android:title="@string/eBook"
        android:icon="@drawable/ic_ebook"/>


    <item android:id="@+id/navigation_internalLinks"
        android:title="@string/InternalLinks"
        android:checkable="true"
        android:icon="@drawable/ic_internal_links_label"/>

    <item android:id="@+id/navigation_website"
          android:title="@string/Website"
        android:icon="@drawable/ic_website"/>
    <item android:id="@+id/navigation_clubs_of_sit"
          android:title="@string/clubs_of_sit"
        android:icon="@drawable/ic_clubs_of_sit"/>

    <item android:id="@+id/navigation_share"
          android:title="@string/Share"
        android:icon="@drawable/ic_share"/>
<!--    <item android:id="@+id/navigation_theme"-->
<!--        android:title="@string/Theme"-->
<!--        android:icon="@drawable/ic_theme"/>-->
    <item android:id="@+id/navigation_review"
        android:title="@string/RateUs"
        android:icon="@drawable/ic_review"/>
    <item android:id="@+id/navigation_developer"
          android:title="@string/Developer"
        android:icon="@drawable/ic_developer"/>



</menu>