<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/darkColor"
                android:src="@drawable/user"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Namma_SIT"
                    android:textSize="18dp"
                    android:textColor="@color/textColor"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Date"
                        android:fontFamily="@string/light"
                        android:textSize="@dimen/text_size14"
                        android:textColor="@color/textColor"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/feedItemDate"
                        android:text="@string/demoDate"
                        android:fontFamily="@string/light"
                        android:textSize="@dimen/text_size14"
                        android:textColor="@color/textColor"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/text_margin"
                        android:text="@string/Time"
                        android:fontFamily="@string/light"
                        android:textSize="@dimen/text_size14"
                        android:textColor="@color/textColor"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/feedItemTime"
                        android:text="@string/demoTime"
                        android:fontFamily="@string/light"
                        android:textSize="@dimen/text_size14"
                        android:textColor="@color/textColor"/>


                </LinearLayout>

            </LinearLayout>
            
            
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/text_margin"
            android:hint="@string/Title_Will_Load_Here"
            android:textSize="17sp"
            android:id="@+id/feedTitleDisplay"
            android:textColor="@color/textColor"/>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/feedImageDisplay"
            android:scaleType="fitCenter"/>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>