<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".nav_drawer.clubsOfSIT.SingleClubDescriptionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/user"
                android:layout_margin="5dp"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/websiteColor"
                android:id="@+id/clubLogo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/clubName"
                android:textColor="@color/websiteColor"
                android:textSize="@dimen/text_size19"
                android:text="@string/name"
                android:layout_marginTop="10dp"
                android:fontFamily="@string/regular"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/websiteColor"
                android:id="@+id/clubType"
                android:text="@string/type"
                android:textSize="@dimen/text_size14"
                android:layout_marginTop="10dp"
                android:fontFamily="@string/regular"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"/>
            <TextView
                android:id="@+id/visitPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@string/light"
                android:gravity="center"
                android:text="@string/Visit_Page"
                android:textColor="@color/websiteColor"
                android:textSize="10sp"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#c1c1c1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:text="@string/description"
                android:textColor="@color/websiteColor"
                android:fontFamily="@string/extra_bold"
                android:textSize="20sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:background="#c1c1c1"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/description_comes_here"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size16"
                    android:textStyle="italic"
                    android:id="@+id/clubDescription"/>




            </com.google.android.material.textfield.TextInputLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#c1c1c1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:text="@string/club_gallery"
                android:textColor="@color/websiteColor"
                android:fontFamily="@string/extra_bold"
                android:textSize="20sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:background="#c1c1c1"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/clubGalleryRecycler"/>



        </LinearLayout>


    </ScrollView>
    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/ebook_view_activity_shimmer_view"/>

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>