<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.smarteist.autoimageslider.SliderLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/aboutSliderLayout"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Overview"
                android:textSize="@dimen/title_size"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="#5A4FCF"
                android:fontFamily="@string/bold"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/grey2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Vision"
                    android:textColor="#5A4FCF"
                    android:textSize="@dimen/title_size2"
                    android:fontFamily="@string/regular"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/clickToViewVision"
                    android:text="(Click to view)"
                    android:textSize="10dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OverView Comes Here"
                android:textAlignment="textStart"
                android:id="@+id/visionTV"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:textSize="@dimen/text_size18"
                android:textColor="@color/textColor"
                android:fontFamily="@string/light"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Mission"
                    android:textColor="#5A4FCF"
                    android:textSize="@dimen/title_size2"
                    android:fontFamily="@string/regular"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(Click to view)"
                    android:id="@+id/clickToViewMission"
                    android:textSize="10dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mission Comes Here"
                android:textAlignment="textStart"
                android:id="@+id/missionTV"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:textSize="@dimen/text_size18"
                android:textColor="@color/textColor"
                android:fontFamily="@string/light"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Quality_Policy"
                    android:textColor="#5A4FCF"
                    android:textSize="@dimen/title_size2"
                    android:fontFamily="@string/regular"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/clickToViewQualityPolicy"
                    android:text="(Click to view)"
                    android:textSize="10dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OverView Comes Here"
                android:textAlignment="textStart"
                android:id="@+id/qualityPolicyTV"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:textSize="@dimen/text_size18"
                android:textColor="@color/textColor"
                android:fontFamily="@string/light"/>



        </LinearLayout>



    </LinearLayout>

</androidx.core.widget.NestedScrollView>