<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/websiteColor"
    android:orientation="vertical"
    tools:context=".SplashScreenActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:src="@drawable/sit_logo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/collegeName"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/collegeSplashText"
        android:textAlignment="center"
        android:textColor="#EAE6E6"
        android:textSize="17sp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/collegeAddress"
        android:textAlignment="center"
        android:textColor="#F3EBEB"
        android:textSize="14sp" />

    <ProgressBar
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:foregroundGravity="center"/>

    <!--    <com.airbnb.lottie.LottieAnimationView-->
    <!--        android:layout_width="100dp"-->
    <!--        android:layout_height="100dp"-->
    <!--        android:layout_marginTop="100dp"-->
    <!--        android:layout_gravity="center"-->
    <!--        android:foregroundGravity="center"-->
    <!--        app:lottie_autoPlay="true"-->
    <!--        app:lottie_fileName="lf30_editor_x5zuqjlh.json"-->
    <!--        app:lottie_loop="true" />-->

</LinearLayout>