<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/user"
            android:layout_gravity="center"
            android:id="@+id/developerImage"
            app:civ_border_color="@color/websiteColor"
            app:civ_border_width="1dp"
            android:layout_marginTop="10dp"
            app:civ_border_overlay="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/developerName"
            android:textColor="@color/websiteColor"
            android:textSize="@dimen/text_size19"
            android:text="Name"
            android:layout_marginTop="10dp"
            android:fontFamily="@string/regular"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/websiteColor"
            android:id="@+id/developerRole"
            android:text="Role"
            android:textSize="@dimen/text_size14"
            android:layout_marginTop="10dp"
            android:fontFamily="@string/regular"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="@dimen/text_size17"
            android:textColor="@color/websiteColor"
            android:fontFamily="@string/light"
            android:textStyle="bold"
            android:text="@string/contact"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:weightSum="3"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:src="@drawable/ic_linkedin"
                android:id="@+id/developerLinkedin"/>
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:src="@drawable/ic_gmail"
                android:id="@+id/developerGmail"/>
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:src="@drawable/ic_instagram"
                android:id="@+id/developerInstagram"/>





        </LinearLayout>



    </LinearLayout>

</androidx.cardview.widget.CardView>